# cut_3D_point_cloud

./: CMakeLists.txt  main.cpp
